--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1485,16 +1485,19 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     flex-shrink: 0;
     background: var(--tmi-gray-60);
     height: 8px;
-    border-radius: 4px 4px 4px 4px;
+    border-radius: 100px;
     z-index: 1;
 }
 
 .report-nav > .nav-item {
-    width: 190px;
+    width: 220px;
     text-align: center;
-    font-size: 20px;
+    align-items: center;
+    font-size: 24px;
     line-height: 40px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
 }
 
 @media (max-width: 575.98px) {
@@ -1516,15 +1519,15 @@ input.barcode-checkbox[type=checkbox]:checked+label {
 
 .report-nav > .nav-item > .active:after {
     content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
     background: var(--tmi-light-blue);
+    width: 220px;
     height: 8px;
-    border-radius: 4px 4px 4px 4px;
+    border-radius: 10px;
     z-index: 2;
     flex-direction: column;
+    align-items: center;
+    display: flex;
 }
 
 @media (max-width: 1080px) {
