--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1508,7 +1508,7 @@ input.barcode-checkbox[type=checkbox]:checked+label {
 }
 
 .report-nav > .nav-item > a {
-    color: var(--tmi-gray-70);
+    color: var(--tmi-gray-80);
 }
 
 .report-nav > .nav-item > .active {
@@ -1530,13 +1530,7 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     display: flex;
 }
 
-@media (max-width: 1080px) {
-    .report-nav-container .navbar-collapse .nav {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    
+@media (max-width: 992px) {
     .report-nav > .nav-item {
         display: block;
         width: 100%;
@@ -1548,8 +1542,16 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     }
 
     .report-nav > .nav-item > .active:after {
-        max-width: 50%;
-    }
+        content: '';
+        position: relative;
+        background: var(--tmi-light-blue);
+        width: 220px;
+        height: 8px;
+        border-radius: 10px;
+        z-index: 2;
+        flex-direction: column;
+        align-items: center;
+        display: flex;    }
 
     .navbar-toggler.nav-toggle::after {
         display: none;
@@ -1568,4 +1570,27 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     margin-left: auto;
     margin-right: auto;
     display: flex;
+}
+
+.nav-toggle-report {
+    width: 190px;
+    text-align: center;
+    font-size: 24px;
+    line-height: 40px;
+    background-color: white;
+    color: var(--tmi-gray-80);
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-toggle-report:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: var(--tmi-light-blue);
+    height: 8px;
+    border-radius: 4px 4px 4px 4px;
+    width: 190px;
 }
