--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1369,6 +1369,29 @@
 
     $(document).ready(init);
 </script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const navLinks = document.querySelectorAll('.report-nav .nav-link');
+        const navButtonText = document.querySelector('.navbar-toggler .nav-button-text');
+        const collapseElement = document.getElementById('reportNavContent');
+        const bootstrapCollapse = new bootstrap.Collapse(collapseElement, { toggle: false });
+
+        function updateNavButtonText(text) {
+            if (navButtonText) {
+                navButtonText.textContent = text;
+            }
+        }
+
+        navLinks.forEach(link => {
+            link.addEventListener('click', function () {
+                updateNavButtonText(this.textContent.trim());
+                bootstrapCollapse.hide();
+            });
+        });
+    });
+</script>
+
 {% endblock %}
 
 {% block breadcrumb %}
@@ -1382,11 +1405,11 @@
 {% block content %}
     <nav class="navbar navbar-expand-lg report-nav-container">
         <div class="container-fluid ps-0 pe-0">
-            <button class="navbar-toggler nav-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#reportNavContent" aria-controls="reportNavContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span>
-                    {{ _('Navigation') }}
+            <button class="navbar-toggler nav-toggle-report" type="button" data-bs-toggle="collapse" data-bs-target="#reportNavContent" aria-controls="reportNavContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="nav-button-text">
+                    {{ _('Diversity') }}
                 </span>
-                <img src="/static/img/nav_down.svg" height="20" width="20" style="margin-top: 10px"/>
+                <img src="/static/img/nav_down_report.svg" height="20" width="20" style="margin-top: 10px" />
             </button>
 
             <div class="collapse navbar-collapse" id="reportNavContent">
