--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1453,20 +1453,19 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     }
 }
 
-@media (max-width: 1280px) {
-    .report-nav-container {
-        position: relative;
-        max-width: 1280px;
-        margin-left: auto;
-        margin-right: auto;
+@media (max-width: 1279.98px) {
+    .report-nav > .nav-item {
+        display: block;
+        width: 100%;
+        text-align: left;
     }
+}
 
-    #profile-kebab-dropdown {
-        margin-top: 24px;
-        border: 1px solid var(--tmi-gray-70);
-        border-radius: 5px;
-        width: 40px;
-        height: 40px;
+@media (min-width: 1280px) {
+    .report-nav > .nav-item {
+        display: flex;
+        width: auto;
+        text-align: center;
     }
 }
 
@@ -1530,34 +1529,6 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     display: flex;
 }
 
-@media (max-width: 992px) {
-    .report-nav > .nav-item {
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
-
-    .report-nav::before {
-        display: none;
-    }
-
-    .report-nav > .nav-item > .active:after {
-        content: '';
-        position: relative;
-        background: var(--tmi-light-blue);
-        width: 220px;
-        height: 8px;
-        border-radius: 10px;
-        z-index: 2;
-        flex-direction: column;
-        align-items: center;
-        display: flex;    }
-
-    .navbar-toggler.nav-toggle::after {
-        display: none;
-    }
-}
-
 .report-text {
     text-align: left;
     max-width: 1280px;
@@ -1593,4 +1564,26 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     height: 8px;
     border-radius: 4px 4px 4px 4px;
     width: 190px;
+}
+
+.navbar-toggler.nav-toggle::after {
+    display: none;
+}
+
+@media (max-width: 1279.98px) {
+    .report-navbar .navbar-collapse {
+        display: none;
+    }
+    .report-navbar .navbar-toggler {
+        display: block;
+    }
+}
+
+@media (min-width: 1280px) {
+    .report-navbar .navbar-collapse {
+        display: flex !important;
+    }
+    .report-navbar .navbar-toggler {
+        display: none;
+    }
 }
