--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1403,7 +1403,7 @@
 {% endblock %}
 
 {% block content %}
-    <nav class="navbar report-navbar report-nav-container">
+    <nav class="navbar navbar-expand-custom report-nav-container">
         <div class="container-fluid ps-0 pe-0">
             <button class="navbar-toggler nav-toggle-report" type="button" data-bs-toggle="collapse" data-bs-target="#reportNavContent" aria-controls="reportNavContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="nav-button-text">
@@ -1433,8 +1433,6 @@
             </div>
         </div>
     </nav>
-
-
     <div class="col-12 tab-content" id="top-nav-tabContent">
         <div class="tab-pane fade show active" id="compare" role="tabpanel" aria-labelledby="compare-tab">
             <div class="report-text">
