--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1573,13 +1573,13 @@ input.barcode-checkbox[type=checkbox]:checked+label {
 }
 
 .nav-toggle-report {
-    width: 190px;
+    width: auto;
     text-align: center;
     font-size: 24px;
     line-height: 40px;
     background-color: white;
     color: var(--tmi-gray-80);
-    display: flex;
+    gap: 8px;
     justify-content: space-between;
 }
 
@@ -1592,7 +1592,7 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     background: var(--tmi-light-blue);
     height: 8px;
     border-radius: 4px 4px 4px 4px;
-    width: 190px;
+    width: 200px;
 }
 @media (min-width: 1280px){
     .navbar-expand-custom {
