--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1409,7 +1409,7 @@
                 <span class="nav-button-text">
                     {{ _('Diversity') }}
                 </span>
-                <img src="/static/img/nav_down_report.svg" height="20" width="20" style="margin-top: 10px" />
+                <img src="/static/img/nav_down_report.svg" height="20" width="20" />
             </button>
 
             <div class="collapse navbar-collapse" id="reportNavContent">
