--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1472,6 +1472,7 @@ input.barcode-checkbox[type=checkbox]:checked+label {
 
 .report-nav {
     position: relative;
+    width: 100%;
 }
 
 .report-nav::before {
