--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1482,7 +1482,8 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     bottom: 0;
     left: 0;
     right: 0;
-    width: 1280px;
+    max-width: 1280px;
+    width: 100%;
     background: var(--tmi-gray-60);
     flex-shrink: 0;
     height: 8px;
