--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1575,7 +1575,7 @@ input.barcode-checkbox[type=checkbox]:checked+label {
 }
 
 .nav-toggle-report {
-    width: auto;
+    width: 240px;
     text-align: center;
     font-size: 24px;
     line-height: 40px;
